--- a/ExampleApplication/Web.config
+++ b/ExampleApplication/Web.config
@@ -12,10 +12,10 @@
 				<value>False</value>
 			</setting>
 			<setting name="UserName" serializeAs="String">
-				<value>452d032afd3ff0520ba3f3aabb273d58</value>
+				<value>YOUR_API_USER_HERE</value>
 			</setting>
 			<setting name="Password" serializeAs="String">
-				<value>d5a6d79c4de9c187f48044485a7c081a</value>
+				<value>YOUR_API_PASSWORD_HERE</value>
 			</setting>
 		</Nortal.Utilities.MessenteSms.MessenteConnectionSettings>
 	</applicationSettings>
